{
  "version": 4,
  "terraform_version": "1.14.5",
  "serial": 305,
  "lineage": "673914c8-a989-6bb1-3d70-aa053e402df2",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0f8ffdf620a576",
            "arn": "arn:aws:ec2:us-west-2:221082203366:elastic-ip/eipalloc-02b0f8ffdf620a576",
            "domain": "vpc",
            "id": "eipalloc-02b0f8ffdf620a576",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-35-163-137-113.us-west-2.compute.amazonaws.com",
            "public_ip": "35.163.137.113",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-eip-nat"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-eip-nat",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:internet-gateway/igw-08addd8167d2a4629",
            "id": "igw-08addd8167d2a4629",
            "owner_id": "221082203366",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-igw"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-igw",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02b0f8ffdf620a576",
            "association_id": "eipassoc-0b47edd8ddd10fe68",
            "connectivity_type": "public",
            "id": "nat-057fdeefce2b0feb1",
            "network_interface_id": "eni-0bb8975154ab83fa3",
            "private_ip": "10.0.0.88",
            "public_ip": "35.163.137.113",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-04e4b3a73c588c1ac",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-nat"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-nat",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:network-acl/acl-0938042196b14a1f3",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0938042196b14a1f3",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "owner_id": "221082203366",
            "subnet_ids": [
              "subnet-00ef4f8fade24f569",
              "subnet-0c60abded22429218"
            ],
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-nacl"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-nacl",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:network-acl/acl-0a817ae7d6a373f59",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 65535
              }
            ],
            "id": "acl-0a817ae7d6a373f59",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 443
              }
            ],
            "owner_id": "221082203366",
            "subnet_ids": [
              "subnet-04e4b3a73c588c1ac",
              "subnet-0e3b902ce72b9dfb6"
            ],
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-nacl"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-nacl",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:route-table/rtb-0e9ebc8ab79ad8423",
            "id": "rtb-0e9ebc8ab79ad8423",
            "owner_id": "221082203366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057fdeefce2b0feb1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-rt-1"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-rt-1",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:route-table/rtb-0904d7d40f3e8d70f",
            "id": "rtb-0904d7d40f3e8d70f",
            "owner_id": "221082203366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-057fdeefce2b0feb1",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-rt-2"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-rt-2",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:route-table/rtb-0373150f98c22cfd4",
            "id": "rtb-0373150f98c22cfd4",
            "owner_id": "221082203366",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08addd8167d2a4629",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-rt"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-rt",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dbe7a3d19f0f7819",
            "route_table_id": "rtb-0e9ebc8ab79ad8423",
            "subnet_id": "subnet-00ef4f8fade24f569"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05302017e845c5983",
            "route_table_id": "rtb-0904d7d40f3e8d70f",
            "subnet_id": "subnet-0c60abded22429218"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0350142f071cd05ce",
            "route_table_id": "rtb-0373150f98c22cfd4",
            "subnet_id": "subnet-04e4b3a73c588c1ac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-032d8daeaabcd0408",
            "route_table_id": "rtb-0373150f98c22cfd4",
            "subnet_id": "subnet-0e3b902ce72b9dfb6"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:security-group/sg-00bd7b0c0fb2220a4",
            "description": "Security Group for Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bd7b0c0fb2220a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-alb-sg",
            "name_prefix": "",
            "owner_id": "221082203366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-alb-sg"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-alb-sg",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "baseline_compute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:security-group/sg-0b6065ea5bc606428",
            "description": "Baseline SG for compute instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6065ea5bc606428",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTPS from ALB",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bd7b0c0fb2220a4"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-baseline-sg",
            "name_prefix": "",
            "owner_id": "221082203366",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-baseline-sg"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-baseline-sg",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_security_group.alb",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:subnet/subnet-00ef4f8fade24f569",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ef4f8fade24f569",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082203366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-subnet-1",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-subnet-1",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:subnet/subnet-0c60abded22429218",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c60abded22429218",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "221082203366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-subnet-2",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-private-subnet-2",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra",
              "Tier": "Private"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:subnet/subnet-04e4b3a73c588c1ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e4b3a73c588c1ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082203366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-subnet-1",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-subnet-1",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:subnet/subnet-0e3b902ce72b9dfb6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e3b902ce72b9dfb6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "221082203366",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-subnet-2",
              "Tier": "Public"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-public-subnet-2",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra",
              "Tier": "Public"
            },
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:vpc/vpc-0b2b466b6eaf0c2fc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f65c9c0742b9a7f6",
            "default_route_table_id": "rtb-0addc7cf161a0cc51",
            "default_security_group_id": "sg-07655f368e2ded150",
            "dhcp_options_id": "dopt-027e8477cf029a563",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b2b466b6eaf0c2fc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0addc7cf161a0cc51",
            "owner_id": "221082203366",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-vpc"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-vpc",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:221082203366:vpc-endpoint/vpce-05096aaca637d69e5",
            "cidr_blocks": [
              "3.5.76.0/22",
              "16.12.96.0/20",
              "16.12.112.0/21",
              "3.5.80.0/21",
              "16.15.32.0/20",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "16.12.88.0/21",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05096aaca637d69e5",
            "ip_address_type": "ipv4",
            "owner_id": "221082203366",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0904d7d40f3e8d70f",
              "rtb-0e9ebc8ab79ad8423"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "service_region": "us-west-2",
            "state": "available",
            "tags": {
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-s3-endpoint"
            },
            "tags_all": {
              "Environment": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1",
              "ManagedBy": "Terraform",
              "Name": "cli-019ca4e4-7b10-72aa-9590-2ec1453ddcd1-s3-endpoint",
              "Owner": "019ca492-b349-737b-8c09-f9a636ecfb04",
              "Project": "launchpad-infra"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0b2b466b6eaf0c2fc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.main",
            "module.vpc.aws_nat_gateway.main",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main",
            "module.vpc.data.aws_availability_zones.available",
            "module.vpc.data.aws_region.current"
          ]
        }
      ]
    }
  ]
}